--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,23 +6,14 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "test": "jest"
+    "lint": "next lint"
   },
   "dependencies": {
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
-    "dotenv": "^16.4.5",
-    "jest-environment-jsdom": "^29.7.0",
-    "next": "14.2.4",
+    "next": "^14.2.5",
     "react": "^18",
     "react-dom": "^18",
-    "react-scripts": "^5.0.1",
-    "tsconfig-paths-jest": "^0.0.1"
-  },
-  "devDependencies": {
-    "@testing-library/dom": "^10.3.1",
-    "@testing-library/react": "^16.0.0",
-    "jest": "^27.5.1"
+    "react-router-dom": "^6.24.1"
   }
 }
