--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
+    "cors": "^2.8.5",
+    "http-proxy": "^1.18.1",
     "next": "^14.2.5",
     "react": "^18",
     "react-dom": "^18",
