--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,5 +17,10 @@
     "react": "^18",
     "react-dom": "^18",
     "react-router-dom": "^6.24.1"
+  },
+  "devDependencies": {
+    "@testing-library/dom": "^10.3.2",
+    "@testing-library/react": "^16.0.0",
+    "cypress": "^13.13.0"
   }
 }
